--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ body{
 .wrapper-yamaguchi{
   position: relative;
   height: 757px;
+  overflow: hidden;
 }
 
 .yamaguchi-image{
@@ -52,10 +53,10 @@ body{
   position: absolute;
   bottom: -20px;
 
-  width: 193px;
+  width: 200px;
   height: 61px;
 
-  margin-left: 50px;
+  margin-left: 45px;
 
   background-color: #000;
   border-radius: 50%;
